# ini

./: CMakeLists.txt  README.md
include/tinyini/: tinyini.h  tinyini.hpp
src/: tinyini.c  tinyini.cpp
